# Project-Templates

./: .gitignore  README.md
Cpp-LibApplication/: CMakeLists.txt  readme.md
Cpp-LibApplication/THE_LIB/: CMakeLists.txt  pch.hpp
Cpp-LibApplication/THE_LIB/common/: logger.hpp
Cpp-LibApplication/cmake/: Global_Options.cmake
Cpp-LibApplication/tests/: CMakeLists.txt  test.cpp
